# sudoku

./: Cargo.toml
board/: Cargo.toml
board/src/: bitset.rs  lib.rs  neighbors.rs  pos.rs  sudoku.rs
solver/: Cargo.toml
solver/src/: lib.rs  solver.rs  technique.rs
solver/src/techniques/: guess_and_check.rs  mod.rs  naked_single.rs
src/: bitset.rs  lib.rs  neighbors.rs  pos.rs  sudoku.rs  type_indexed.rs  type_indexed_bitset.rs  type_indexed_slice.rs  value.rs
src/generator/: mod.rs
src/solver/: block.rs  col.rs  house.rs  line.rs  mod.rs  row.rs  solver.rs  strategy.rs  tests.rs
src/solver/strategies/: coloring.rs  guess_and_check.rs  hidden_single.rs  hidden_subset.rs  locked_candidate.rs  mod.rs  naked_single.rs  naked_subset.rs  pattern_overlay.rs  wings.rs
